--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -7,8 +7,19 @@
     font-family: 'Poppins', sans-serif;
 }
 
+:root {
+
+    --bodyBg: linear-gradient(to left, #003147, #004d6e, #006a99, #0089c5, #03a9f4);
+    --sideBackground: #003147;
+    --textColor: #03a9f4;
+    --sideBarTitle: #fff;
+    --percentBack: #081921;
+    --aboutText: #2a7da2;
+    --skillsBG: var(--textColor);
+}
+
 body {
-    background: lightblue;
+    background: var(--bodyBg);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +31,7 @@ body {
     width: 100%;
     max-width: 1000px;
     min-height: 1000px;
-    background: #fff;
+    background: var(--sideBarTitle);
     margin: 50px;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -29,7 +40,7 @@ body {
 
 .container .left_side {
     position: relative;
-    background: #003147;
+    background: var(--sideBackground);
     padding: 40px;
 }
 
@@ -61,7 +72,7 @@ body {
 }
 
 .profileText h2 {
-    color: #fff;
+    color: var(--sideBarTitle);
     font-size: 1.5em;
     margin-top: 20px;
     text-transform: uppercase;
@@ -80,7 +91,7 @@ body {
 }
 
 .contactInfo .title {
-    color: #fff;
+    color: var(--sideBarTitle);
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 1px;
@@ -102,11 +113,11 @@ body {
     display: inline-block;
     width: 30px;
     font-size: 18px;
-    color: #03a9f4;
+    color: var(--textColor);
 }
 
 .contactInfo ul li span {
-    color: #fff;
+    color: var(--sideBarTitle);
     font-weight: 300;
 }
 
@@ -115,17 +126,17 @@ body {
 }
 
 .contactInfo.education h5 {
-    color: #03a9f4;
+    color: var(--textColor);
     font-weight: 500;
 }
 
 .contactInfo.education h4 {
-    color: #fff;
+    color: var(--sideBarTitle);
     font-weight: 300;
 }
 
 .contactInfo.education h4:nth-child(2) {
-    color: #fff;
+    color: var(--sideBarTitle);
     font-weight: 500;
 }
 
@@ -133,7 +144,7 @@ body {
     position: relative;
     width: 100%;
     height: 6px;
-    background: #081921;
+    background: var(--percentBack);
     display: block;
     margin-top: 5px;
 
@@ -144,13 +155,13 @@ body {
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
+    background: var(--textColor);
 
 }
 
 .container .right_side {
     position: relative;
-    background: #ffffff;
+    background: var(--sideBarTitle)fff;
     padding: 40px;
 }
 
@@ -163,7 +174,7 @@ body {
 }
 
 .title2 {
-    color: #003147;
+    color: var(--sideBackground);
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 10px;
@@ -171,6 +182,11 @@ body {
 
 p {
     color: #333;
+    text-align: justify;
+}
+
+a {
+    text-decoration: none;
 }
 
 .about .box {
@@ -192,16 +208,33 @@ p {
 
 .about .box .text h4 {
     text-transform: uppercase;
-    color: #2a7da2;
+    color: var(--aboutText);
     font-size: 16px;
 }
 
-.skills .box {
+.about .box ul li {
     position: relative;
-    width: 100%;
+    list-style-type: circle;
+    margin-left: 20px;
+}
+
+.skills .boxes {
+    position: relative;
     display: grid;
-    grid-template-columns: 150px 1fr;
-    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.skills .box {
+    padding: 5px;
+    background: var(--skillsBG);
+    box-shadow: 2px 1px 0px var(--percentBack);
+    border-radius: 15px;
+    margin: 5px;
+    text-align: center;
+    color: var(--sideBackground);
+    font-weight: 600;
+    font-size: 15px;
+    min-width: 100px;
 }
 
 .skills .box h4 {
@@ -214,7 +247,7 @@ p {
     position: relative;
     width: 100%;
     height: 10px;
-    background: #f0f0f0;
+    background: var(--sideBarTitle);
 }
 
 .skills .box .percent div {
@@ -222,25 +255,37 @@ p {
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
+    background: var(--textColor);
 }
 
 .interest ul {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .interest ul li {
     list-style: none;
-    color: #333;
+    color: var(--textColor);
     font-weight: 500;
     margin: 10px 0;
+    border: 1px solid var(--textColor);
+    border-radius: 15px;
+    padding: 5px;
 }
 
 .interest ul li .fa {
-    color: #03a9f4;
+    color: var(--textColor);
     font-size: 18px;
     width: 25px;
+}
+
+.projects h4 {
+    text-transform: capitalize !important;
+}
+
+.developedIn {
+    font-weight: 500;
+    text-shadow: 2px 1px 5px var(--textColor);
 }
 
 @media (max-width:1000px) {
@@ -251,6 +296,15 @@ p {
 
     .interest ul {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .skills .boxes {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .interest ul {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
